Who am I even doing?

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 </head>
 <body>
-<a href="https://docs.google.com/a/brightpearl.com/presentation/d/e/2PACX-1vSSmfqO_w7I3PD8zper7jBSa4zuO1Kc-1ANMDPxBkfuEld5rQ_SnMn6QID5Fdkdrx7CDn1ktbUGNcn2/pub?start=false&loop=false&delayms=3000">Link to JDBC Streaming slides</a>
+<a href="Streaming_with_JDBC.pdf">Link to JDBC Streaming slides</a>
 <a href="https://github.com/garethsjones/spring-petclinic/tree/stream">Link to source</a>
 </body>
 </html>
